rename improved result images

--- a/Pymaceuticals/pymaceuticals_analysis_tsbarr.ipynb
+++ b/Pymaceuticals/pymaceuticals_analysis_tsbarr.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "4     g791     Ramicane    Male          11          16"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "4     c819          0                45.0                 0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "249"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
        "1592  Female          21          26  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
        "248"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
        "Zoniferol             53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1175,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save plot\n",
-    "plt.savefig('results/bar_pandas.png')\n",
+    "plt.savefig('results/bar_pandas_tl.png')\n",
     "\n",
     "# Display plot\n",
     "plt.show()"
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save plot\n",
-    "plt.savefig('results/bar_pyplot.png')\n",
+    "plt.savefig('results/bar_pyplot_tl.png')\n",
     "\n",
     "# Display plot\n",
     "plt.show()\n",
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1256,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save plot\n",
-    "plt.savefig('results/pie_pandas.png')\n",
+    "plt.savefig('results/pie_pandas_tl.png')\n",
     "\n",
     "# Display plot\n",
     "plt.show()\n"
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1367,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save plot\n",
-    "plt.savefig('results/pie_pyplot.png')\n",
+    "plt.savefig('results/pie_pyplot_tl.png')\n",
     "\n",
     "# Display plot\n",
     "plt.show()"
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1451,7 @@
        "4     a366         30"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1584,7 @@
        "4  Female          16          29  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1741,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save plot\n",
-    "plt.savefig('results/boxplot.png')\n",
+    "plt.savefig('results/boxplot_tl.png')\n",
     "\n",
     "# Display plot\n",
     "plt.show()"
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1877,7 @@
        "1771     l509    Capomulin         45           41.483008"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1939,7 +1939,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save plot\n",
-    "plt.savefig('results/line_plot.png')\n",
+    "plt.savefig('results/line_plot_tl.png')\n",
     "\n",
     "# Display plot\n",
     "plt.show()"
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2167,7 +2167,7 @@
        "24     y793          17           38.506829"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2230,7 +2230,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save plot\n",
-    "plt.savefig('results/scatter_plot.png')\n",
+    "plt.savefig('results/scatter_plot_tl.png')\n",
     "\n",
     "# Display plot\n",
     "plt.show()"
@@ -2249,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2329,7 +2329,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save plot\n",
-    "plt.savefig('results/scatter_with_linregress.png')\n",
+    "plt.savefig('results/scatter_with_linregress_tl.png')\n",
     "\n",
     "# Display plot\n",
     "plt.show()\n"
